# axe

./: .cursorrules  .gitignore  .markdownlint.json  LICENSE  MANIFEST.in  README.md  demo_visual_consistency.py  install.bat  install.sh  main.py  pyproject.toml  requirements.txt  setup.py  test_visual_consistency.py
.arkive/alpha_p/: alpha_p-0.0.1.yaml  alpha_p-0.0.2.yaml  alpha_p-0.0.3.yaml  alpha_p-0.0.4.yaml  alpha_p-0.0.5.yaml  dump.yaml
.arkive/beta_p/: .beta_p-0.0.1.yaml
.arkive/charlie/: req.mecha  sys.mecha
.mecha/: .god.mecha  README.md  init.mecha  persona.mecha  prompt.mecha
axe_cli/: __init__.py  axe_cli.py  command_enhancements.py  config.py  console_advanced.py  converter.py  error_handling.py  interactive.py  preferences_system.py  stats.py  syntax_highlighting.py  theme_system.py  ui_advanced.py  ui_constants.py
docs/: CHANGELOG.md  EXAMPLES.md  OVERVIEW.md  QUICKSTART.md  SUMMARY.md  TODO.md
