[project]
name = "axe"
version = "0.1.0"
description = "Command-line tool for extracting and converting arXiv papers"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "arxiv>=2.0.0",
    "arxiv2text>=0.1.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.scripts]
axe = "axe_cli.axe_cli:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["axe_cli*"]
exclude = ["axe_output*", "*.egg-info*", "__pycache__*"]
